# zippy

./: .gitignore  1.txt  CMakeLists.txt  README.md  test.js
src/: a.cpp  main.cpp
src/headers/lib/: sha256.hpp
src/include/: types.hpp
src/include/lib/: a.hpp  md5.hpp  sha256.hpp  sha512.hpp
src/include/utils/: fileUtils.hpp  fileValidator.hpp  hexadecimal.hpp
src/lib/: md5.cpp  sha256.cpp  sha512.cpp
src/lib/utils/: fileUtils.cpp  fileValidator.cpp  hexadecimal.cpp
